# agentmem

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.claude/: settings.json
.github/skills/openspec-commit/: SKILL.md
.github/workflows/: ci.yml
.opencode/: opencode.jsonc
benches/: recall.rs
docs/: security.md  session-context-hooks.md
openspec/changes/add-recall-search/: tasks.md
openspec/changes/archive/2026-06-04-build-agentmem-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-06-cleanup-dependencies/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-06-configurable-session-context/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-06-rename-vfs-template-to-scheme/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-add-container-image-release/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-add-context-http-endpoint/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-revise-memory-model-and-conventions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-07-tag-style-default-template/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-add-recall-search/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-add-wikilink-references/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-clarify-generic-tool-path-prefix/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-configure-http-allowed-hosts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-09-tools-guide-scope-keys/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-add-list-dir-view/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-add-list-glob-filter/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-add-list-name-ordering/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-10-add-recall-path-scan/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-11-add-backlink-read/: design.md  proposal.md  tasks.md
openspec/changes/build-agentmem-mcp-server/: tasks.md
openspec/changes/configurable-session-context/: design.md  proposal.md  tasks.md
openspec/changes/ignore-file-and-dotfolder-defaults/: design.md  proposal.md  tasks.md
openspec/changes/lean-session-bootstrap/: design.md  tasks.md
openspec/changes/rename-vfs-template-to-scheme/: tasks.md
openspec/specs/build-toolchain/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/container-image/: spec.md
openspec/specs/context-http-api/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/memory-tools/: spec.md
openspec/specs/recall-search/: spec.md
openspec/specs/vault-storage/: spec.md
openspec/specs/wikilink-references/: spec.md
src/: config.rs  error.rs  frontmatter.rs  lib.rs  main.rs  mcp.rs  path.rs  policy.rs  scheme.rs  session_context.rs  storage.rs  telemetry.rs  template.rs  tools.rs  wikilink.rs
src/recall/: mod.rs  simple.rs  tantivy.rs
src/transport/: http.rs  mod.rs  stdio.rs
tests/: crash_safety.rs  http_transport.rs  recall_eviction.rs  schema_snapshots.rs  session_context.rs  stdio_transport.rs  tools.rs  wikilinks.rs
tests/snapshots/: schema_snapshots__schema_agent_scheme.snap  schema_snapshots__schema_agent_template.snap  schema_snapshots__schema_agent_user_scheme.snap  schema_snapshots__schema_agent_user_template.snap  schema_snapshots__schema_empty_scheme.snap  schema_snapshots__schema_recall_tool.snap  schema_snapshots__schema_team_agent_env_user_scheme.snap
(+115 files in other folders)
