[package]
name = "agentmem"
version = "0.1.0"
edition = "2024"
description = "An MCP server fronting an Obsidian-style markdown vault for multi-tenant agent memory."
license = "MIT"
repository = "https://github.com/progamesigner/agentmem"
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "agentmem"
path = "src/main.rs"

[lib]
name = "agentmem"
path = "src/lib.rs"

[features]
default = ["transport-http"]
transport-http = ["dep:axum", "dep:tower", "dep:tower-http", "rmcp/transport-streamable-http-server"]

[dependencies]
rmcp = { version = "0.9", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
fs2 = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"
ignore = "0.4"
base64 = "0.22"
dashmap = "6"
camino = "1"
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["trace"] }

[dev-dependencies]
assert_fs = "1"
predicates = "3"
insta = { version = "1", features = ["json"] }
rstest = "0.23"
assert_cmd = "2"
