[package]
name = "agentmem"
version = "0.3.0"
edition = "2024"
description = "An MCP server fronting a plain-markdown vault for multi-tenant agent memory."
authors = ["Yang Sheng Han <progamesigner@gmail.com>"]
license = "MIT"
repository = "https://github.com/progamesigner/agentmem"
homepage = "https://github.com/progamesigner/agentmem"
documentation = "https://github.com/progamesigner/agentmem#readme"
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "agentmem"
path = "src/main.rs"

[lib]
name = "agentmem"
path = "src/lib.rs"

[features]
default = ["transport-http"]
transport-http = ["dep:axum", "rmcp/transport-streamable-http-server"]
# The opt-in tantivy recall backend (BM25 ranking + frontmatter property filters).
# Off by default: a default build carries neither tantivy nor a YAML parser and
# runs the lightweight `simple` backend.
recall-tantivy = ["dep:tantivy", "dep:serde_yaml"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "fs", "signal", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
schemars = "1.2"
thiserror = "2.0.18"
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive", "env"] }
tempfile = "3.27"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10.4"
ignore = "0.4.26"
base64 = "0.22.1"
dashmap = "6.2"
camino = "1.2"
regex = "1.11.1"
notify = "6.1.1"
axum = { version = "0.8.9", optional = true }
tantivy = { version = "0.22.0", optional = true }
serde_yaml = { version = "0.9.34", optional = true }

[dev-dependencies]
assert_fs = "1.1.4"
insta = { version = "1.47", features = ["json"] }
# MCP client harness for stdio + http integration tests.
rmcp = { version = "1.7", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio = { version = "1.52", features = ["full"] }
